--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: ADA525
 email: danielgunleiksrud@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This webpage will serve as an portfolio of my work in the course ADA525.
-baseurl: "ADA525DanielG" # the subpath of your site, e.g. /blog
-url: "gunleiksrud.org" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "ADA525DanielG/" # the subpath of your site, e.g. /blog
+url: "https://591291-hvl.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  591291-hvl
 
 # Build settings
